fixed button alignment in servers browse

--- a/views/admin/css/fedora_connector_main.css
+++ b/views/admin/css/fedora_connector_main.css
@@ -45,7 +45,7 @@ form.fedora-inline-form {
 }
 
 form.fedora-inline-form-servers {
-    margin: 0.4em 0.6em 0 0;
+    margin: 0em 0.6em 0 0;
     padding: 0;
     float: left;
 }
